# mfx_centralized_exchange

./: .env  .gitignore  Cargo.toml  Makefile  build.rs  example.env
docker-compose/envs/: postgres.env
docker-compose/services/: docker-compose-mongo.yml  docker-compose-nginx.yml  docker-compose-postgres.yml  docker-compose-scylla.yml
docker-compose/services/postgres-db-data/: postmaster.pid
docker-compose/services/postgres-db-data/base/1/: pg_internal.init
docker-compose/services/postgres-db-data/base/16514/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13402  13402_fsm  13402_vm  13406  13407  13407_fsm  13407_vm  13411  13412  13412_fsm  13412_vm  13416  13417  13417_fsm  13417_vm  13421  16515  16520  16521  16523  16533  16534  16536  16538  16547  16548  (+219 more)
docker-compose/services/postgres-db-data/base/17416/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  13402  (+245 more)
docker-compose/services/postgres-db-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
docker-compose/services/postgres-db-data/pg_xact/: 0000
docker-compose/services/redis-data/: dump.rdb
migrations/: 20250214100116_init.up.sql  20250307065820_add_users_kyc_table.up.sql
proto/: auth.proto  kyc.proto  upload.proto  user.proto
src/: main.rs
src/handlers/: auth_handler.rs  kyc_handler.rs  mod.rs  upload_handler.rs  user_handler.rs
src/models/: auth_model.rs  mod.rs  user_model.rs
src/upload_handlers/: mod.rs  rest.rs
src/utils/: auth.rs  kyc.rs  mod.rs
(+264 files in other folders)
