[package]
name = "mfx_centralized_exchange"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
prost = "0.13.4"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "uuid",
    "chrono",
] }
dotenv = "0.15.0"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = "0.4"
rand = "0.8"
bcrypt = "0.17.0"
rand_core = "0.6"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "smtp-transport",
    "builder",
    "native-tls",
    "tokio1-native-tls",
] }
reqwest = { version = "0.12.12", features = ["json"] }
twilio-rs = "0.1.1"

[build-dependencies]
tonic-build = "0.12.3"
